Add notes on RDDs; Update Readme

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### General"
+    "### Prerequisites"
    ]
   },
   {
@@ -29,7 +29,16 @@
     "- Download java: https://java.com/en/download/.\n",
     "- Download Spark: https://spark.apache.org/downloads.html\n",
     "- Download Hadoop: https://github.com/cdarlint/winutils\n",
-    "- Set 'SPARK_HOME' amd 'HADOOP_HOME' environment variables"
+    "\n",
+    "\n",
+    "- Set evironment variables\n",
+    " - SPARK_HOME = \\<path-to-spark-folder>, e.g. SPARK_HOME = \"C:\\spark-3.1.1-bin-hadoop2.7\"\n",
+    " - HADOOP_HOME = \\<path-to-hadoop-folder>, e.g. HADOOP HOME = \"C:\\hadoop\\hadoop-2.7.7\"\n",
+    " \n",
+    " \n",
+    "- Add to PATH\n",
+    " - %SPARK_HOME%\\bin\n",
+    " - %HADOOP_HOME%\\bin"
    ]
   },
   {
@@ -56,6 +65,50 @@
     "\n",
     "```\n",
     "python -m spylon_kernel install\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify installation\n",
+    "\n",
+    "Open a jupyter notebook, select the spylon-kernel and execute some code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x: Int = 2\r\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val x = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you see something like the following output, everything works fine:\n",
+    "\n",
+    "```Output\n",
+    "Intitializing Scala interpreter ...\n",
+    "\n",
+    "Spark Web UI available at http://<your-computer>.com:4040\n",
+    "SparkContext available as 'sc' (version = 3.1.1, master = local[*], app id = local-1618231637628)\n",
+    "SparkSession available as 'spark'\n",
     "```"
    ]
   },
@@ -250,6 +303,31 @@
     "val points = sc.textFile(...).map(parsePoints).persist()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduce Operations on RDDs\n",
+    "\n",
+    " - `fold(zeroval)(combop)`\n",
+    "```Scala\n",
+    "fold(z: A)(f: (A, A) => A): A \n",
+    "```\n",
+    " - `aggregate(zeroval)(seqop, combop)`\n",
+    "```Scala\n",
+    "aggregate(z: => B)(seqop: (B, A) => B, combop: (B, B) => B): B \n",
+    "```\n",
+    "\n",
+    "Spark doesn't even give you the option to use foldLeft/foldRight, which means that if you have to change the return type of your reduction operation, your only choice is to use aggregate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -660,36 +738,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+----------+\n",
-      "| _1|        _2|\n",
-      "+---+----------+\n",
-      "|  1|   ThisIsA|\n",
-      "|  2|    Secret|\n",
-      "|  3|Message:-)|\n",
-      "+---+----------+\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "keyValues: List[(Int, String)] = List((3,Me), (1,Thi), (2,Se), (3,ssa), (1,sIsA), (3,ge:), (3,-)), (2,cre), (2,t))\r\n",
-       "import spark.implicits._\r\n",
-       "keyValuesDs: org.apache.spark.sql.Dataset[(Int, String)] = [_1: int, _2: string]\r\n"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val keyValues = List((3,\"Me\"), (1,\"Thi\"), (2,\"Se\"), (3,\"ssa\"), (1,\"sIsA\"), (3,\"ge:\"), (3,\"-)\"), (2,\"cre\"), (2,\"t\"))\n",
     "\n",
@@ -713,17 +764,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Intitializing Scala interpreter ..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val keyValues = List((3,\"Me\"), (1,\"Thi\"), (2,\"Se\"), (3,\"ssa\"), (1,\"sIsA\"), (3,\"ge:\"), (3,\"-)\"), (2,\"cre\"), (2,\"t\"))\n",
     "\n",
@@ -759,28 +800,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "<console>",
-     "evalue": "52: error: object creation impossible, since:\r",
-     "output_type": "error",
-     "traceback": [
-      "<console>:52: error: object creation impossible, since:\r",
-      "it has 2 unimplemented members.\r",
-      "/** As seen from <$anon: org.apache.spark.sql.expressions.Aggregator[(Int, String),String,String]>, the missing signatures are as follows.\r",
-      " *  For convenience, these are usable as stub implementations.\r",
-      " */\r",
-      "  def bufferEncoder: org.apache.spark.sql.Encoder[String] = ???\r",
-      "  def outputEncoder: org.apache.spark.sql.Encoder[String] = ???\r",
-      "\r",
-      "       val strConcat = new Aggregator[(Int, String), String, String] {\r",
-      "                           ^\r",
-      ""
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "val keyValues = List((3,\"Me\"), (1,\"Thi\"), (2,\"Se\"), (3,\"ssa\"), (1,\"sIsA\"), (3,\"ge:\"), (3,\"-)\"), (2,\"cre\"), (2,\"t\"))\n",
     "\n",
@@ -834,39 +856,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---------------------+\n",
-      "|key|$anon$1(scala.Tuple2)|\n",
-      "+---+---------------------+\n",
-      "|  1|              ThisIsA|\n",
-      "|  2|               Secret|\n",
-      "|  3|           Message:-)|\n",
-      "+---+---------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "keyValues: List[(Int, String)] = List((3,Me), (1,Thi), (2,Se), (3,ssa), (1,sIsA), (3,ge:), (3,-)), (2,cre), (2,t))\r\n",
-       "import spark.implicits._\r\n",
-       "keyValuesDS: org.apache.spark.sql.Dataset[(Int, String)] = [_1: int, _2: string]\r\n",
-       "import org.apache.spark.sql.expressions.Aggregator\r\n",
-       "import org.apache.spark.sql.{Encoder, Encoders}\r\n",
-       "strConcat: org.apache.spark.sql.TypedColumn[(Int, String),String] = $anon$1(staticinvoke(class org.apache.spark.unsafe.types.UTF8String, StringType, fromString, input[0, java.lang.String, true], true, false) AS `value`, input[0, string, true].toString, staticinvoke(class org.apache.spark.unsafe.types.UTF8String, StringType, fromString, input[0, java.lang.String, true], true, false))\r\n"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "val keyValues = List((3,\"Me\"), (1,\"Thi\"), (2,\"Se\"), (3,\"ssa\"), (1,\"sIsA\"), (3,\"ge:\"), (3,\"-)\"), (2,\"cre\"), (2,\"t\"))\n",
     "\n",
